--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -4,18 +4,18 @@
     position: fixed;
     top: 0;
     left: 0;
-    background: blue;
+    background: #fff;
 }
 
 .menu-wrapper {
     display: flex;
     flex-direction: column;
-    background: lightblue;
     align-items: center;
 }
 
 .menu-item {
-    align-items: center;
+    text-align: center;
+    padding: 20px 0;
 }
 
 #menu-cup {
