--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -13,6 +13,10 @@
     align-items: center;
 }
 
+li.menu-item img.logo {
+    max-width: 80%;
+}
+
 .menu-item {
     text-align: center;
     padding: 20px 0;
@@ -36,6 +40,8 @@
 #menu-cart {
     height: 38px;
     width: 42px;
+    position: relative;
+    right: 4px;
 }
 
 #menu-info {
