--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -20,6 +20,15 @@ html {
   margin-right: auto;
   margin-left: auto;
 }
+
+.container-full {
+  width: 100%;
+  padding-right: 100px;
+  padding-left: 100px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
