--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,6 +23,7 @@ body {
 	font-family: Lato;
 	font-weight: 400;
 	font-size: 16px;
+	background-image: url('../assets/tavle_bg.jpg');
 }
 
 
@@ -96,6 +97,39 @@ li p {
 	display: flex;
 	align-items: center;
 	min-height: 300px;
+}
+
+.about-banner {
+	padding: 2.5em 2em;
+	background: #fff;
+	width: 80%;
+}
+
+.some-button-wrapper {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+}
+
+h3 {
+	margin-bottom: .8em;
+}
+
+.some-icons a img{
+	width: 30%;
+	margin: 1em;
+}
+
+.follow-us {
+	font-family: AracneCondensed;
+	font-size: 55px;
+	color: #fff;
+	
+}
+
+.flex-center {
+	display: flex;
+	align-items: center;
 }
 
 /** Media Queries **/
