--- a/src/css/main.css
+++ b/src/css/main.css
@@ -102,7 +102,8 @@ li p {
 .about-banner {
 	padding: 2.5em 2em;
 	background: #fff;
-	width: 80%;
+	width: 90%;
+	float: right;
 }
 
 .some-button-wrapper {
@@ -127,9 +128,27 @@ h3 {
 	
 }
 
+.ingredient-banner {
+	padding: 2.5em 2em;
+	background: #fff;
+	width: 100%;
+	position: relative;
+	bottom: 2em;
+	right: 15px;
+}
+
 .flex-center {
 	display: flex;
 	align-items: center;
+}
+
+.text-row {
+	background: #fff;
+	display: flex;
+}
+
+.text-area {
+	padding: 2em 2em 2em 0;
 }
 
 /** Media Queries **/
