--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,185 +1,198 @@
 /** Imports **/
-
 @import url("reset.css");
 @import url("grid.css");
-
-
 /** Fonts **/
-
 @import url("../assets/fonts/OpenSans/OpenSans.css");
 @import url("../assets/fonts/SketchBlockBold/SketchBlockBold.css");
 @import url("../assets/fonts/Lato/Lato.css");
 @import url("../assets/fonts/AracneCondensed/AracneCondensed.css");
-
-
 /** Global **/
-
 html, div {
-	box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-    background: #4c5466;
-	font-family: Lato;
-	font-weight: 400;
-	font-size: 16px;
-	background-image: url('../assets/tavle_bg.jpg');
+  background: #4c5466;
+  font-family: Lato;
+  font-weight: 400;
+  font-size: 16px;
+  background-image: url("../assets/tavle_bg.jpg");
 }
-
 
 /** Main **/
 .site-content {
-	margin-left: 120px;
+  margin-left: 120px;
 }
 
 .hero-img {
-	position: relative;
-	z-index: 2;
-	height: 600px;
-	overflow: hidden;
+  position: relative;
+  z-index: 2;
+  height: 600px;
+  overflow: hidden;
 }
 
-.hero-img img{
-	width: 100%;
+.hero-img img {
+  width: 100%;
 }
 
 .cream {
-	background: #f6f2ec;
-	min-height: 300px;
+  background: #f6f2ec;
+  min-height: 300px;
 }
 
 .welcome-box {
-	position: relative;
-	z-index: 5;
-	bottom: 50px;
-	background: #fff;
-	padding: 3vw;
+  position: relative;
+  z-index: 5;
+  bottom: 50px;
+  background: #fff;
+  padding: 3vw;
 }
 
 h1.heading {
-	font-family: SketchBlockBold;
-	font-weight: 700;
-	font-size: 78px;
-	margin: 12px 0;
+  font-family: SketchBlockBold;
+  font-weight: 700;
+  font-size: 78px;
+  margin: 12px 0;
 }
 
 p {
-	font-size: 20px;
-	line-height: 1.6;
+  font-size: 20px;
+  line-height: 1.6;
 }
 
 li p {
-	font-family: AracneCondensed;
-	font-size: 18px;
+  font-family: AracneCondensed;
+  font-size: 18px;
 }
 
 .mainbutton {
-	background-image: url('../assets/mbutton.svg');
-	font-size: 24px;
-	font-family: AracneCondensed;
-	text-decoration: none;
-	color: #fff;
-	padding: 1em 1.6em;
-	background-size: 100% 700%;
-	position: relative;
-	margin: 10px 20px;
+  background-image: url("../assets/mbutton.svg");
+  font-size: 24px;
+  font-family: AracneCondensed;
+  text-decoration: none;
+  color: #fff;
+  padding: 1em 1.6em;
+  background-size: 100% 700%;
+  position: relative;
+  margin: 10px 20px;
 }
 
 .mainbutton-red {
-	background-position: 0% 0%;
+  background-position: 0% 0%;
 }
 
 .mainbutton-blue {
-	background-position: 0% 33.333%;
+  background-position: 0% 33.333%;
 }
 
 .button-wrapper {
-	display: flex;
-	align-items: center;
-	min-height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 300px;
 }
 
 .about-banner {
-	padding: 2.5em 2em;
-	background: #fff;
-	width: 90%;
-	float: right;
+  padding: 2.5em 2em;
+  background: #fff;
+  width: 90%;
+  float: left;
 }
 
 .some-button-wrapper {
-	display: flex;
-	flex-direction: column;
-	text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
 }
 
 h3 {
-	margin-bottom: .8em;
+  margin-bottom: .8em;
 }
 
-.some-icons a img{
-	width: 30%;
-	margin: 1em;
+.some-icons a img {
+  width: 30%;
+  margin: 1em;
 }
 
 .follow-us {
-	font-family: AracneCondensed;
-	font-size: 55px;
-	color: #fff;
-	
+  font-family: AracneCondensed;
+  font-size: 55px;
+  color: #fff;
 }
 
 .ingredient-banner {
-	padding: 2.5em 2em;
-	background: #fff;
-	width: 100%;
-	position: relative;
-	bottom: 2em;
-	right: 15px;
+  padding: 2.5em 2em;
+  background: #fff;
+  width: 100%;
+  position: relative;
+  bottom: 2em;
+  right: 15px;
 }
 
 .flex-center {
-	display: flex;
-	align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.flex-center h1.heading {
+  text-align: center;
+}
+
+.flex-center p {
+  text-align: center;
+}
+
+.flex-col {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .text-row {
-	background: #fff;
-	display: flex;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .text-area {
-	padding: 2em 2em 2em 0;
+  padding: 2em 2em 2em 0;
+}
+
+.isdisk {
+  margin: auto;
+  width: 50%;
+  position: relative;
+  bottom: 50%;
+}
+
+.catering-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 /** Media Queries **/
-
 /* Smaller than desktop */
-@media (max-width: 980px) {
-	
-}
-
 /* Smaller than tablet */
-@media (max-width: 750px) {
-	
-}
-
 /* Smaller than mobile */
-@media (max-width: 400px) {
-	
-}
-
 /* Larger than mobile */
-@media (min-width: 400px) {
-	
-}
-
 /* Larger than tablet */
-@media (min-width: 750px) {
-	
-}
-
 /* Larger than desktop */
-@media (min-width: 980px) {
-	
-}
-
+/*# sourceMappingURL=main.css.map */
