Added social media section. Added footer

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -170,7 +170,11 @@ h3 {
 }
 
 .text-area {
-  padding: 2em 2em 2em 0;
+  padding: 2em 2em 2em 2em;
+}
+
+.text-area.merged {
+  padding-left: 0em;
 }
 
 .isdisk {
@@ -180,12 +184,61 @@ h3 {
   bottom: 50%;
 }
 
-.catering-wrapper {
+.catering-wrapper::before {
+  content: '';
+  background: #fff;
   position: absolute;
   top: 50%;
   left: 0;
   right: 0;
   bottom: 0;
+}
+
+.some-post-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 100px;
+  padding-bottom: 5vw;
+}
+
+.some-post-row .some-post {
+  width: calc(33% - 40px);
+  margin: auto 20px;
+}
+
+.some-post-row .some-post img {
+  width: 100%;
+  border: 20px solid #fff;
+}
+
+.some-post-row .center-post {
+  position: relative;
+  top: 5vw;
+}
+
+footer.container-full {
+  margin-top: 5em;
+  padding-top: 4em;
+  padding-bottom: 4em;
+  background: #ff0000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+}
+
+footer.container-full h4 {
+  font-family: AracneCondensed;
+  font-size: 30px;
+}
+
+footer.container-full li {
+  padding: .5em 0;
+}
+
+footer.container-full li span {
+  font-weight: bold;
 }
 
 /** Media Queries **/
