--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -22,6 +22,11 @@ li.menu-item img.logo {
     padding: 20px 0;
 }
 
+.menu-item a {
+    text-decoration: none;
+    color: inherit;
+}
+
 #menu-cup {
     height: 38px;
     width: 42px;
