--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -5,6 +5,9 @@
     top: 0;
     left: 0;
     background: #fff;
+    -webkit-box-shadow: 1px 0px 3px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 0px 3px -1px rgba(0,0,0,0.75);
+    box-shadow: 1px 0px 3px -1px rgba(0,0,0,0.75);
 }
 
 .menu-wrapper {
