--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -198,7 +198,7 @@ h3 {
 	padding-bottom: 5vw;
 	.some-post {
 		width: calc(33% - 40px);
-		margin: auto 20px;
+		margin: auto 20px 5em;
 		img {
 			width: 100%;
 			border: 20px solid #fff;
@@ -211,7 +211,6 @@ h3 {
 }
 
 footer.container-full {
-	margin-top: 5em;
 	padding-top: 4em;
 	padding-bottom: 4em;
 	background: #ff0000;
@@ -260,11 +259,6 @@ footer.container-full {
 			width: 100%;
 		}
 	}
-}
-
-.ingredient-toolbar-wrapper {
-	background: #fff;
-	height: 100px;
 }
 
 /** Media Queries **/
