--- a/src/css/main.css
+++ b/src/css/main.css
@@ -104,7 +104,7 @@ li p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-height: 100%;
+  height: 300px;
   margin-bottom: 50px;
 }
 
@@ -313,6 +313,111 @@ footer.container-full li span {
 
 /** Media Queries **/
 /* Smaller than desktop */
+@media (max-width: 1025px) {
+  .container-full {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .not-mobile {
+    display: none;
+  }
+  .site-content {
+    margin-left: 0px;
+    width: 100vw;
+  }
+  .hero-img {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .hero-img img {
+    height: 600px;
+    width: auto;
+  }
+  h1.heading {
+    font-size: 2em;
+  }
+  p {
+    font-size: 16px;
+  }
+  .button-wrapper {
+    min-height: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .button-wrapper a {
+    width: 100%;
+  }
+  .cream-slim {
+    height: 100%;
+    margin-bottom: 50px;
+  }
+  .text-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .flex-center {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .text-area.merged {
+    padding-left: 2em;
+  }
+  .ingredient-banner {
+    padding-top: 6vw;
+    right: 0;
+    top: 0;
+    width: 100%;
+    display: block;
+  }
+  .about-banner {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  .some-button-wrapper {
+    margin-bottom: 3em;
+  }
+  .some-post-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .some-post-row .some-post {
+    width: 100%;
+    margin: auto;
+    margin-bottom: 5vw;
+  }
+  .some-post-row .center-post {
+    top: 0;
+  }
+  footer.container-full {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  footer.container-full ul {
+    margin-bottom: 2em;
+  }
+  .presentation-text {
+    margin-bottom: 100px;
+  }
+}
+
 /* Smaller than tablet */
 @media (max-width: 750px) {
   .not-mobile {
@@ -339,7 +444,7 @@ footer.container-full li span {
             align-items: center;
   }
   .hero-img img {
-    max-height: 600px;
+    height: 600px;
     width: auto;
   }
   h1.heading {
